# ob-python-extras

./: CLAUDE.md  LICENSE  Readme.org  dataframe_image_default.nix  ob-python-extras-alerts-keybindings.el  ob-python-extras-alerts.el  ob-python-extras-gptel-integration.el  ob-python-extras-keybindings.el  ob-python-extras.el  pyproject.toml  shell.nix  suggested_keybindings.el
.github/workflows/: org_babel_tests.yml
auto_generated_ipynbs/: Readme.ipynb
bashscripts/: convert_ipynb_to_org.sh  convert_org_to_ipynb.sh  convert_org_to_ipynb_precommit_hook.sh  default-python-env.org  eval-org.sh
bashscripts/pre-commit-hooks/: commit-an-ipynb-copy.sh  commit-plot-pngs.sh
python/: build_renamer.org  orgbabeltesting.org  print_org_df.py  pymockbabel.py  renamer_utils.py  replacements.json  shell.nix  test_renamer.org
tests/: .dir-locals.el  CI_DEBUG.md  babel-formatting.org  dataframe_image_default.nix  extract-results.el  last_successful_test_system_info.md  readme.org  run_expect_tests.sh  run_modular.sh  shell.nix  test_nix_shells.sh
tests/auto_generated_ipynbs/: babel-formatting.ipynb  readme.ipynb
tests/golden/: babel-formatting.org  change_table_index.json  converting_html_with_images_and_table.json  expected-fail.org  format_table_floats.json  limit_table_max_rows.json  not_rounded_timer.json  polars.json  print_long_table.json  print_medium_table.json  print_table.json  printing_multiple_dataframes.json  shell_with_tabulate.nix  styled_dataframes.json  table_with_plot_and_text.json  tables_auto_align_off.json  testing_sessions_print.json  timer.json  (+1 more)
(+3 files in other folders)
