[project]
name = "ob-python-extras"
version = "0.1.0"
description = "Python support scripts for ob-python-extras Emacs package"
requires-python = ">=3.10"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "polars",
    "ipdb",
    "rich",
    "pyarrow",
    "plotly",
    "ipython",
    "torch",
]

[tool.uv]
dev-dependencies = [
    "pyright",
]
